--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "@babel/parser": "^7.25.8",
     "@babel/traverse": "^7.25.7",
     "commander": "^10.0.1",
-    "glob": "^9.3.5"
+    "glob": "^9.3.5",
+    "ignore": "^7.0.5"
   },
   "keywords": [
     "component-tracker",
